add .gitignore file and update index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <nav class="site-navigation text-right ml-auto " role="navigation">
 
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">Գլխավոր111</a></li>
+                <li><a href="#home-section" class="nav-link">Գլխավոր</a></li>
                 <li><a href="#services-section" class="nav-link">Սպասարկում</a></li>
               
 
